[gd_scene load_steps=6 format=3 uid="uid://cpqqabrpwgjxo"]

[ext_resource type="Script" path="res://game_objects/ship.gd" id="1_uy2eo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xwdrl"]

[sub_resource type="Animation" id="Animation_kebqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipBlockHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7qofv"]
resource_name = "hover"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipBlockHolder:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 2,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r01af"]
_data = {
"RESET": SubResource("Animation_kebqb"),
"hover": SubResource("Animation_7qofv")
}

[node name="Ship" type="Node2D"]
script = ExtResource("1_uy2eo")

[node name="ShipBlockHolder" type="Node2D" parent="."]

[node name="CanRotateSensor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanRotateSensor"]
shape = SubResource("CircleShape2D_xwdrl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r01af")
}

[connection signal="area_entered" from="CanRotateSensor" to="." method="_on_can_rotate_sensor_area_entered"]
[connection signal="area_exited" from="CanRotateSensor" to="." method="_on_can_rotate_sensor_area_exited"]
